cruise-backend/seed_error.txt

> cruise-backend@1.0.0 seed
> ts-node -r tsconfig-paths/register src/database/seeds/seed.ts

C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/database/seeds/seed.ts(295,74): error TS2339: Property 'CRAPS' does not exist on type 'typeof CasinoGameType'.

    at createTSError (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Asus\OneDrive\Documents\V2\cruise-booking\cruise-backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339 ]
}
